--- a/Kalkulator .NET v2/MainWindow.xaml
+++ b/Kalkulator .NET v2/MainWindow.xaml
@@ -5,8 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kalkulator.NET_v2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="Kalkulator .NET v2" Height="344.003" Width="236.775" Background="White" WindowStyle="ToolWindow" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow" >
+    <Grid Margin="0,0,-8,0">
+        <TextBox x:Name="resultBox" FontSize="20" TextAlignment="Right" HorizontalAlignment="Left" Height="46" Margin="10,10,0,0" TextWrapping="NoWrap" Text="0" VerticalAlignment="Top" Width="202" IsReadOnly="True" Cursor="Arrow" MaxLength="16" MaxLines="1" TextChanged="resultBox_TextChanged"/>
+        <Button x:Name="button_Equals" Content="=" HorizontalAlignment="Left" Margin="177,226,0,0" VerticalAlignment="Top" Width="35" Height="73" Click="EquationButton_Click"/>
+        <Button x:Name="button_Addition" Content="+" HorizontalAlignment="Left" Margin="135,265,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="OperationButton_Click"/>
+        <Button x:Name="button_Coma" Content="," HorizontalAlignment="Left" Margin="94,265,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="ComaButton_Click"/>
+        <Button x:Name="button_Zero" Content="0" HorizontalAlignment="Left" Margin="11,265,0,0" VerticalAlignment="Top" Width="77" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_One" Content="1" HorizontalAlignment="Left" Margin="11,226,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Two" Content="2" HorizontalAlignment="Left" Margin="52,226,0,0" VerticalAlignment="Top" Width="36" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Three" Content="3" HorizontalAlignment="Left" Margin="94,226,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Substraction" Content="-" HorizontalAlignment="Left" Margin="135,226,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="OperationButton_Click"/>
+        <Button x:Name="button_Four" Content="4" HorizontalAlignment="Left" Margin="11,186,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Five" Content="5" HorizontalAlignment="Left" Margin="52,186,0,0" VerticalAlignment="Top" Width="36" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Six" Content="6" HorizontalAlignment="Left" Margin="94,186,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Multiplication" Content="*" HorizontalAlignment="Left" Margin="135,186,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="OperationButton_Click"/>
+        <Button x:Name="button_Seven" Content="7" HorizontalAlignment="Left" Margin="11,147,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Eight" Content="8" HorizontalAlignment="Left" Margin="52,147,0,0" VerticalAlignment="Top" Width="36" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Nine" Content="9" HorizontalAlignment="Left" Margin="94,147,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NumericButton_Click"/>
+        <Button x:Name="button_Division" Content="/" HorizontalAlignment="Left" Margin="135,147,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="OperationButton_Click"/>
+        <Button x:Name="button_Backspace" Content="⥢" FontSize="18" HorizontalAlignment="Left" Margin="11,108,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="BackspaceButton_Click"/>
+        <Button x:Name="button_CE" Content="CE" HorizontalAlignment="Left" Margin="52,108,0,0" VerticalAlignment="Top" Width="36" Height="34" Click="CEButton_Click"/>
+        <Button x:Name="button_C" Content="C" HorizontalAlignment="Left" Margin="94,108,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="CButton_Click"/>
+        <Button x:Name="button_Negative" Content="±" HorizontalAlignment="Left" Margin="135,108,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NegativeButton_Click"/>
+        <Button x:Name="button_Invert" Content="1/x" HorizontalAlignment="Left" Margin="177,186,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="InvertionButton_Click"/>
+        <Button x:Name="button_Percent" Content="%" HorizontalAlignment="Left" Margin="177,147,0,0" VerticalAlignment="Top" Width="35" Height="34" Click ="PercentButton_Click"/>
+        <Button x:Name="button_Sqrt" Content="√" HorizontalAlignment="Left" Margin="177,108,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="SqrtButton_Click"/>
+        <Button x:Name="button_MC" Content="MC" HorizontalAlignment="Left" Margin="11,69,0,0" VerticalAlignment="Top" Width="35" Height="34"/>
+        <Button x:Name="button_MR" Content="MR" HorizontalAlignment="Left" Margin="52,69,0,0" VerticalAlignment="Top" Width="36" Height="34"/>
+        <Button x:Name="button_MS" Content="MS" HorizontalAlignment="Left" Margin="94,69,0,0" VerticalAlignment="Top" Width="35" Height="34"/>
+        <Button x:Name="button_MPlus" Content="M-" HorizontalAlignment="Left" Margin="135,69,0,0" VerticalAlignment="Top" Width="35" Height="34"/>
+        <Button x:Name="button_MMinus" Content="M+" HorizontalAlignment="Left" Margin="177,69,0,0" VerticalAlignment="Top" Width="35" Height="34"/>
+
     </Grid>
 </Window>
