--- a/Kalkulator .NET v2/MainWindow.xaml
+++ b/Kalkulator .NET v2/MainWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kalkulator.NET_v2"
         mc:Ignorable="d"
-        Title="Kalkulator .NET v2" Height="344.003" Width="236.775" Background="White" WindowStyle="ToolWindow" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow" >
+        Title="Kalkulator .NET v2" Height="344.003" Width="236.775" Background="White" WindowStyle="ToolWindow" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Cursor="Arrow" KeyDown="Window_KeyDown" KeyUp="Window_KeyUp" Loaded="Window_Loaded" >
+    
     <Grid Margin="0,0,-8,0">
         <TextBox x:Name="resultBox" FontSize="24" TextAlignment="Right" HorizontalAlignment="Left" Height="46" Margin="10,10,0,0" TextWrapping="NoWrap" Text="0" VerticalAlignment="Top" Width="202" IsReadOnly="True" Cursor="Arrow" MaxLength="14" MaxLines="1"/>
         <Button x:Name="button_Equals" Content="=" HorizontalAlignment="Left" Margin="177,226,0,0" VerticalAlignment="Top" Width="35" Height="73" Click="EquationButton_Click"/>
         <Button x:Name="button_Addition" Content="+" HorizontalAlignment="Left" Margin="135,265,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="OperationButton_Click"/>
-        <Button x:Name="button_Coma" Content="," HorizontalAlignment="Left" Margin="94,265,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="ComaButton_Click"/>
+        <Button x:Name="button_Comma" Content="," HorizontalAlignment="Left" Margin="94,265,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="CommaButton_Click"/>
         <Button x:Name="button_Zero" Content="0" HorizontalAlignment="Left" Margin="11,265,0,0" VerticalAlignment="Top" Width="77" Height="34" Click="NumericButton_Click"/>
         <Button x:Name="button_One" Content="1" HorizontalAlignment="Left" Margin="11,226,0,0" VerticalAlignment="Top" Width="35" Height="34" Click="NumericButton_Click"/>
         <Button x:Name="button_Two" Content="2" HorizontalAlignment="Left" Margin="52,226,0,0" VerticalAlignment="Top" Width="36" Height="34" Click="NumericButton_Click"/>
